--- a/Obfuscator/ABC.ini
+++ b/Obfuscator/ABC.ini
@@ -2,11 +2,11 @@
 Version=1.2
 
 [Window]
-Maximized=1
-Width=1206
+Maximized=0
+Width=769
 Height=576
-Left=80
-Top=64
+Left=452
+Top=42
 
 [View]
 ShowOutWindow=0
@@ -94,5 +94,5 @@ Foreground=536870911
 Style=0
 
 [Files]
-File1=D:\STUDY\2_COURSE\Летняя Практика\Obfuscator\program.pas
+File1=D:\STUDY\2_COURSE\Летняя Практика\Obfuscator\Obfuscator\program.pas
 
