--- a/Obfuscator/TESTS/ABC.ini
+++ b/Obfuscator/TESTS/ABC.ini
@@ -3,14 +3,14 @@ Version=1.2
 
 [Window]
 Maximized=1
-Width=769
+Width=1206
 Height=576
-Left=452
-Top=42
+Left=80
+Top=64
 
 [View]
-ShowOutWindow=0
-OutWindowHeight=392
+ShowOutWindow=1
+OutWindowHeight=271
 
 [Print]
 Left=10
@@ -94,6 +94,9 @@ Foreground=536870911
 Style=0
 
 [Files]
-File1=D:\STUDY\2_COURSE\Летняя Практика\Obfuscator\Obfuscator\program.pas
-File2=D:\STUDY\2_COURSE\Летняя Практика\Obfuscator\Obfuscator\program_1.pas
+File1=D:\STUDY\2_COURSE\Летняя Практика\Obfuscator\Obfuscator\TESTS\18.pas
+File2=D:\STUDY\2_COURSE\Летняя Практика\Obfuscator\Obfuscator\TESTS\17.pas
+File3=D:\STUDY\2_COURSE\Летняя Практика\Obfuscator\Obfuscator\TESTS\16.pas
+File4=D:\STUDY\2_COURSE\Летняя Практика\Obfuscator\Obfuscator\TESTS\15.pas
+File5=D:\STUDY\2_COURSE\Летняя Практика\Obfuscator\Obfuscator\TESTS\14.pas
 
